--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ai-sdk/openai": "^1.2.0",
     "@ai-sdk/react": "^1.1.20",
     "@ai-sdk/ui-utils": "^1.1.16",
+    "@deepgram/sdk": "^3.11.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
@@ -46,6 +47,7 @@
     "ai": "^4.1.51",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
