--- a/package.json
+++ b/package.json
@@ -24,16 +24,18 @@
     "@cloudflare/vitest-pool-workers": "^0.7.5",
     "@cloudflare/workers-types": "^4.20250303.0",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/dotenv": "^8.2.3",
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/ws": "^8.18.0",
     "@vitejs/plugin-react": "^4.3.4",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.9",
     "typescript": "^5.8.2",
     "vite": "^6.2.0",
     "vitest": "3.0.7",
-    "wrangler": "^3.113.0"
+    "wrangler": "^3.114.0"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.0",
@@ -48,10 +50,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "lmnt-node": "^2.3.0",
     "lucide-react": "^0.477.0",
+    "openai": "^4.86.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
+    "ws": "^8.18.1",
     "zod": "^3.24.2"
   }
 }
