--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
+    "twilio": "^5.8.2",
     "ws": "^8.18.1",
     "zod": "^3.24.2"
   }
